--- a/vercel.json
+++ b/vercel.json
@@ -1,2 +1,4 @@
 
-{ "rewrites": [{ "source": "/(.*)", "destination": "/" }] }
+{ "rewrites": [
+    { "source": "/api/(.*)", "destination": "api/$1" },
+    { "source": "/(.*)", "destination": "/" }] }
