--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,1 @@
-
-{ "rewrites": [
-    { "source": "/api/(.*)", "destination": "api/$1" },
-    { "source": "/(.*)", "destination": "/" }] }
+{ "rewrites": [{ "source": "/(.*)", "destination": "/" }] }
